@@ -1,0 +1,10 @@
+@SQ	SN:chr1	LN:8	M5:ea83e9cb5120302eb00d51abdee77521
+@SQ	SN:2	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AH:*
+@SQ	SN:chrX	LN:8	M5:ea83e9cb5120302eb00d51abdee77521
+@SQ	SN:Y	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AH:*
+@SQ	SN:M	LN:8	M5:ea83e9cb5120302eb00d51abdee77521
+@SQ	SN:MT	LN:8	M5:ea83e9cb5120302eb00d51abdee77521
+@SQ	SN:chrM	LN:8	M5:ea83e9cb5120302eb00d51abdee77521
+@SQ	SN:chrMT	LN:8	M5:ea83e9cb5120302eb00d51abdee77521
+@SQ	SN:m	LN:8	M5:ea83e9cb5120302eb00d51abdee77521
+@SQ	SN:MM	LN:8	M5:ea83e9cb5120302eb00d51abdee77521
